Fix: Block Quote styling on small screens

--- a/src/v1.1/pages/HowItWorks/Topic/topic.sass
+++ b/src/v1.1/pages/HowItWorks/Topic/topic.sass
@@ -138,6 +138,8 @@
       grid-column: 1/span 6
     &__quote
       max-width: 620px
+      padding-left: 0
+      padding-right: 0
     &__textsPara
       &.asideBrowser
         display: flex
